update my own database

--- a/TakeawayTitans/src/appsettings.json
+++ b/TakeawayTitans/src/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "TakeawayTitansContext": "Host=dpg-d3dki48gjchc73akhltg-a.oregon-postgres.render.com;Port=5432;Username=takeawaytitansdb_user;Password=Q304E6bhG5IKewEwDCRYO59BWUL2Cl9B;Database=takeawaytitansdb;SSL Mode=Require;Trust Server Certificate=true"
+    "TakeawayTitansContext": "Host=dpg-d3iae8buibrs73co601g-a.singapore-postgres.render.com;Port=5432;Username=takeaway_titans_user;Password=UO1b3fITZZv9PGOMJkQwJ8Dnzm45VVkv;Database=takeawaytitansdb;SSL Mode=Require;Trust Server Certificate=true"
   }
 }
